--- a/test-output/HtmlReport/ExtentHtml.html
+++ b/test-output/HtmlReport/ExtentHtml.html
@@ -49,7 +49,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Nov 11, 2024 04:26:30 pm</span>
+			<span class='label blue darken-3 suite-start-time'>Nov 12, 2024 03:09:32 pm</span>
 			</a>
 		</ul>
 	</div>
@@ -188,7 +188,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>login feature</span>
-						<span class='test-time'>Nov 11, 2024 04:26:32 pm</span>
+						<span class='test-time'>Nov 12, 2024 03:09:33 pm</span>
 						<span class='test-status right pass'>Pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -201,7 +201,7 @@
 
 <div class='scenario outline node' test-id='2' status='pass'>
 
-	<span class='duration right label'>00 00 10.786</span>
+	<span class='duration right label'>00 00 10.619</span>
 	<div class="bdd-test">
 		<div class="scenario-name"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span> Scenario Outline: login with multiple user</div>
 	</div>
@@ -225,12 +225,12 @@
 							<div class="node-step">application lanuch is done</div>
 				</li>
 				<li test-id='5' class='gc when Pass' status='Pass'>
-					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_username(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>When user enters valid  username"<user name>"</h6>
+					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_username(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>When user enters valid  username "Testing@gmail.com"</h6>
 
-							<div class="node-step">User entered the email<user name></div>
+							<div class="node-step">User entered the emailTesting@gmail.com</div>
 				</li>
 				<li test-id='6' class='gc and Pass' status='Pass'>
-					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_password(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>And user enters valid password"p1234"</h6>
+					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_password(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>And user enters valid password "p1234"</h6>
 
 							<div class="node-step">User entered the passwordp1234</div>
 				</li>
@@ -255,12 +255,12 @@
 							<div class="node-step">application lanuch is done</div>
 				</li>
 				<li test-id='10' class='gc when Pass' status='Pass'>
-					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_username(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>When user enters valid  username"<user name>"</h6>
+					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_username(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>When user enters valid  username "Naresh@gmail.com"</h6>
 
-							<div class="node-step">User entered the email<user name></div>
+							<div class="node-step">User entered the emailNaresh@gmail.com</div>
 				</li>
 				<li test-id='11' class='gc and Pass' status='Pass'>
-					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_password(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>And user enters valid password"Test@1234"</h6>
+					<h6 class="step-name" title="StepDefinitionspackage.LoginStepDefinition.user_enters_valid_password(java.lang.String)"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span>And user enters valid password "Test@1234"</h6>
 
 							<div class="node-step">User entered the passwordTest@1234</div>
 				</li>
@@ -338,12 +338,12 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 11, 2024 04:26:32 pm</td>
+										<td>Nov 12, 2024 03:09:33 pm</td>
 										<td class='linked' test-id='3'>login with multiple user</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
 									<tr>
-										<td>Nov 11, 2024 04:26:38 pm</td>
+										<td>Nov 12, 2024 03:09:39 pm</td>
 										<td class='linked' test-id='8'>login with multiple user</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
@@ -376,12 +376,12 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 11, 2024 04:26:32 pm</td>
+										<td>Nov 12, 2024 03:09:33 pm</td>
 										<td class='linked' test-id='3'>login with multiple user</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
 									<tr>
-										<td>Nov 11, 2024 04:26:38 pm</td>
+										<td>Nov 12, 2024 03:09:39 pm</td>
 										<td class='linked' test-id='8'>login with multiple user</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
@@ -425,19 +425,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 11, 2024 04:26:30 pm</div>
+					<div class='panel-lead'>Nov 12, 2024 03:09:32 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 11, 2024 04:26:42 pm</div>
+			 		<div class='panel-lead'>Nov 12, 2024 03:09:44 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>00 00 11.976</div>
+					<div class='panel-lead'>00 00 11.720</div>
 				</div>
 			</div>
 			<div class='col s6'>
@@ -509,7 +509,7 @@
 		
 		<script>
 			var timeline = {
-			        "login feature":10.792
+			        "login feature":10.625
 			};
 		</script>
 		
